[project]
name = "python-paymcp-server-demo"
version = "0.0.1"
description = "Minimal MCP server demo with PayMCP payment integration and configuration management."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.12.0",
    # Using mcp.server.fastmcp from official MCP SDK (not standalone fastmcp package)
    "python-dotenv>=1.1.0",
    "paymcp @ file://../paymcp",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
